Project info update

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Portfolio website for David V.
+	Portfolio website - David V.
 -->
 <html>
 	<head>
@@ -92,31 +92,35 @@
 								<p>Since 2015 I have worked on various projects some of which have made to the Apple AppStore, some have been made private due to the nature of the contracts and some I have uploaded to my <a href="https://github.com/verebes1" target="_blank">GitHub</a>.</p>
 								<p>Please find some examples below:<br>
 									<b>AVERAGIZER: AVERAGE CALCULATOR</b><br>
-									It has been made completely programmatically using UIKit. 
-									Complete programmatic approach no StoryBoards used, UIKit, Custom made scrollable and resizable views.<br>
+									Average calculating app. It uses boards to calculate the average product made per hour. The user is required to input a product name onto a board. Next add the times from and times to he/she was making a product. If it happens that more than one product was made in a 24h period, the user can add more boards to be able to calculate the averages per product.<br> 
+									The app has been built using a complete programmatic approach without StoryBoards, UIKit, Custom made scrollable and resizable views.<br>
 									<a href="https://apps.apple.com/us/app/averagizer-average-calculator/id1471022731?mt=8" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/en-us/badge-lrg.svg?releaseDate=2019-09-21&kind=iossoftware&bubble=ios_apps) no-repeat;width:135px;height:40px;"></a>
 									<br><br>
 									<b>PIECEPAY: PIECEWORK CALCULATOR</b><br>
-									It has been made completely programmatically using UIKit.
-									Complete programmatic approach no StoryBoards used, UIKit, Persistent Storage as a Realm Database, Custom UI Elements, Unit tests, UI Tests, CocoaPods<br> 
+									PiecePay is a piecework calculator and tracker app for people who are being paid per piece, it also allows to set a minimum hourly rate when the user is not being paid on piecework scheme. It calculates the day rate earned, the rate per hour achieved as well as shows how much more you have earned on that day then your normal average daily minimum rate. The user has the option to save the calculations into a Realm database and is able to edit the calculations if needed. The saved calculations also show a monthly summary of earnings and products produced per month.<br>
+									The app has been made completely programmatically using UIKit without StoryBoards, Persistent Storage as a Realm Database, Custom UI Elements, Unit tests, UI Tests, CocoaPods<br> 
 									<a href="https://apps.apple.com/us/app/piecepay-piecework-calculator/id1401931208?mt=8" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/en-us/badge-lrg.svg?releaseDate=2018-07-29&kind=iossoftware&bubble=ios_apps) no-repeat;width:135px;height:40px;"></a>
 									<br><br>
 									<b>SHAPE SWAP: MATCH 4 PUZZLE</b><br>
+									Shape Swap is a puzzle game similar to those match 3 games, however in this game the player is required to match 4 instead of 3 and gets penalty points for breaking this rule. To make the game easier once you move a shape it stays in that place unlike the other match 3 games where the shape returns to it's original position if there is no match.<br>
 									Game created using: SpriteKit with implemented Game Center and Google Ads.
 									<br>
 									<a href="https://apps.apple.com/us/app/shape-swap-match-4-puzzle/id1358707553?mt=8" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/en-us/badge-lrg.svg?releaseDate=2018-03-15&kind=iossoftware&bubble=ios_apps) no-repeat;width:135px;height:40px;"></a>
 									<br><br>
 									<b>SIMON SAYS: COLOURBLIND EDITION</b><br>
+									Classical Simon Says game where the player is required to repeat the sequence that the game is producing. It gets harder and harder with every iteration. The player can play against their friend by sharing the phone. There is an option to login to Game Center and this way the player's high score gets submitted to the high score board, which gets populated and keeps the best 25 scores.<br>
 									Game created using: UIKit with implemented Game Center, Google Ads, custom HighScore board populated over the internet.
 									<br>
 									<a href="https://apps.apple.com/us/app/simon-says-colourblind-edition/id1364928731?mt=8" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/en-us/badge-lrg.svg?releaseDate=2018-03-30&kind=iossoftware&bubble=ios_apps) no-repeat;width:135px;height:40px;"></a>
 									<br><br>
 									<b>FUEL CALCULATOR: MPG CONVERTER</b><br>
+									Born rather out of frustration, I am not used to think in terms of fuel economy in MPGs instead I prefer to use L/100km. I have seen many apps but they lacked simplicity or have missed some basic functionality. This app is both simple and has 3D touch shortcuts for convenience. The user just needs to enter the conversion value and tap convert. There is also an option to track fuel economy by saving everything into a Realm database.<br>
 									Fuel conversion and tracking app: UIKit, Persistent Storage using Realm Database, 3D Touch.
 									<br>
 									<a href="https://apps.apple.com/us/app/fuel-calculator-mpg-converter/id1352988536?mt=8" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/en-us/badge-lrg.svg?releaseDate=2018-02-27&kind=iossoftware&bubble=ios_apps) no-repeat;width:135px;height:40px;"></a>
 									<br><br>
 									<b>SANTA'S: PRESENT MIXUP</b><br>
+									It is a similar game to Shape Swap where the player has to match 4 shapes instead of 3 in order to proceed to the next level, however this has a Christmas theme.
 									Game created using: SpriteKit with implemented Game Center, Google Ads and Facebook login integration.
 									<br>
 									<a href="https://apps.apple.com/us/app/santas-present-mixup/id1327711528?mt=8" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/en-us/badge-lrg.svg?releaseDate=2017-12-23&kind=iossoftware&bubble=ios_apps) no-repeat;width:135px;height:40px;"></a>
