--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 										- used third party APIs, like OpenWeather, Bitcoin Tracker, JSON data interpretation,<br>
 										- integrating CocoaPods and Carthage libraries,<br>
 										- implementing persistent storage using Realm and Core Data<br>
-										- using design patterns such as: MVC or MVVM
+										- using design patterns such as: MVC or MVVM<br>
 										- heavily experienced in building adaptable UI’s for many screen sizes via Interface Builder as well as
 										programatically
 									
