--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 										<tbody>
 											<tr>
 												<td>Swift,<br>Objective-C</td>
-												<td>iOS Development, Xcode, UIKit, Storyboards, Programmatic interface creation, SwiftUI, Unit Testing, UI Testing, Using RESTful Apis, Persistent storage using: Core Data, Realm, JSON Data interpretation, CocoaPods, Carthage</td>
+												<td>iOS Development, Xcode, UIKit, Storyboards, Programmatic interface creation, SwiftUI, Unit Testing, UI Testing, Using RESTful Apis, Persistent storage using: Core Data, Realm, JSON Data interpretation, CocoaPods, Carthage, Using MVC and MVVM design patterns</td>
 												<td>4+ Years</td>
 											</tr>
 											<tr>
