--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<p><h3>Experience:</h3>
 								<ul>
 									<li><b>03-2019 - Present - iOS App Task Creator at <a href="https://devskiller.com" target="_blank">Devskiller</a></b><br>
-										I am responsible for the creation of complete iOS Programming tasks for candidate verification which include, Unit Tests, UI Tests, Core Data, MVC design pattern, algorithms, real world scenarios, they consist of fully fledged Xcode projects, which then need to be fixed by the candidate in order to pass screening.
+										I am responsible for the creation of complete iOS Programming tasks for candidate verification which include, Unit Tests, UI Tests, Core Data, MVC design pattern, algorithms, real world scenarios, they consist of fully fledged Xcode projects, which then need to be fixed by the candidate in order to pass screening. Remote collaboration through Slack, GitLab, Trello.
 									</li>
 									<li><b>10-2015 - Present - Self Employed iOS Developer</b><br>
 										I have designed, developed/implemented, tested various apps many of them have been deployed to the Apple Appstore. Technologies involved: <br>
@@ -64,6 +64,7 @@
 										- integrating CocoaPods and Carthage libraries,<br>
 										- implementing persistent storage using Realm and Core Data<br>
 										- using design patterns such as: MVC or MVVM<br>
+										- collaboration using GitLab, Slack, Agile (Scrum) methodologies using Jira<br> 
 										- heavily experienced in building adaptable UI’s for many screen sizes via Interface Builder as well as
 										programatically
 									
