--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 									<li><b>10-2015 - Present - Self Employed iOS Developer</b><br>
 										I have designed, developed/implemented, tested various apps many of them have been deployed to the Apple Appstore. Technologies involved: <br>
 										- connecting to RESTful APIs, working with Cocoa Touch Elements,<br>
-										- used third party APIs, like OpenWeather, Bitcoin Tracker, JSON data interpretation,<br>
+										- used third-party APIs, like OpenWeather, Bitcoin Tracker, JSON data interpretation,<br>
 										- integrating CocoaPods and Carthage libraries,<br>
 										- implementing persistent storage using Realm and Core Data<br>
-										- using design patterns such as: MVC or MVVM<br>
+										- using design patterns such as MVC or MVVM<br>
 										- collaboration using GitLab, Slack, Agile (Scrum) methodologies using Jira<br> 
 										- heavily experienced in building adaptable UI’s for many screen sizes via Interface Builder as well as
-										programatically
+										programmatically
 									
 									</li>
 								</ul>
