--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 									Remote contractor for <a href="https://devskiller.com" target="_blank">Devskiller</a> a developer screening company.
 								I have a passion for writing clean and reusable code.<br>
 								I speak the following languages: English, German, Polish, Hungarian<br>
-								My interests: I am a fan of Game of Thrones and Vikings series. Interested in Artificial Intelligence and a Lucid Dreaming enthusiast.<br>
+								I am a fan of Game of Thrones and Vikings series. Interested in Artificial Intelligence and a Lucid Dreaming enthusiast.<br><br>
 								Please, check out my <a href="#work">projects</a>.<br>
 								<a href="http://adprogress.co.uk/CV_ENG_David_Verbenyi_2019-N.pdf" target="_blank">Download my CV</a>
 								</p>
