--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 											<tr>
 												<td>Swift,<br>Objective-C</td>
 												<td>iOS Development, Xcode, UIKit, Storyboards, Programmatic interface creation, SwiftUI, Unit Testing, UI Testing, Using RESTful Apis, Persistent storage using: Core Data, Realm, JSON Data interpretation, CocoaPods, Carthage, Using MVC and MVVM design patterns</td>
-												<td>4+ Years</td>
+												<td>5 Years</td>
 											</tr>
 											<tr>
 												<td>Java,<br> Python, <br> HTML</td>
