--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/intro.jpg" alt="" /></span>
-								<p>I am self taught iOS Developer with 5+ years of experience in writing code. I have spent most of my career developing apps in Swift and Objective-C from scratch to release. <br>
+								<p>I am self taught iOS Developer and a full stack Web Developer with 5+ years of experience in writing code. I have spent most of my career developing apps in Swift and Objective-C from scratch to release. <br>
 									Remote contractor for <a href="https://devskiller.com" target="_blank">Devskiller</a> a developer screening company.
 								I have a passion for writing clean and reusable code.<br>
 								I speak the following languages: English, German, Polish, Hungarian<br>
@@ -164,8 +164,8 @@
 											</tr>
 											<tr>
 												<td>Node.JS</td>
-												<td>Built one project: Sales lead collecting landing page for a new product using Node.js and Express.js and PostregSQL Database. It is available on my <a href="https://github.com/verebes1/nodejs-express-postregsql-landing-page" target="_blank">GitHub</a>.</td>
-												<td>Less than a year</td>
+												<td>Built several projects including a Sales lead collecting landing page for a new product using Node.js and Express.js and PostregSQL Database. It is available on my <a href="https://github.com/verebes1/nodejs-express-postregsql-landing-page" target="_blank">GitHub</a>.</td>
+												<td>2 Years</td>
 											</tr>
 											<tr>
 												<td>Photoshop</td>
